[project]
name = "18-pdf-summary-importer"
version = "0.1.0"
description = "A script to summarize PDF files from GCS and save the summary to Spanner."
requires-python = ">=3.13"
dependencies = [
    "google-cloud-spanner>=3.59.0",
    "google-genai>=1.49.0",
    "fastapi>=0.121.1",
    "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "httpx>=0.28.1",
]

[tool.uv.sources.pypi]
url = "https://pypi.org/simple"